Fix innersense button on mobile - refs #11227

--- a/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/product3dViewer.css
+++ b/.modman/Jumbobag_Core/src/skin/frontend/jumbobag/default/css/product3dViewer.css
@@ -13,6 +13,13 @@
 	width: 60%;
 	padding-top: 15px;
 }
+@media (max-width: 768px) {
+	.product-image-3dviewer-link {
+		margin-top: 15px;
+		padding-top: 25px;
+		width: 100%;
+	}
+}
 .product-image-3dviewer-link--hidden {
 	opacity: 0;
 	pointer-events: none;
